compiler/src/compile/snapshots/compiler__compile__symtab_visitor__test__symtab_success_snapshot_tests@method_success.tapir.snap
---
source: compiler/src/compile/symtab_visitor.rs
expression: script
input_file: compiler/src/compile/snapshot_tests/symtab_visitor/method_success.tapir
---
Script(
  imports: [],
  struct_declarations: [],
  property_declarations: [],
  globals: [],
  functions: [
    Function(
      kind: Regular,
      name: "@toplevel",
      span: "[span]",
      statements: [
        Statement(
          span: "[span]",
          kind: VariableDeclaration(
            idents: [
              TypedIdent(
                ident: Ident(
                  span: "[span]",
                  ident: "x",
                ),
                ty: Some(TypeWithLocation(
                  t: Some(Int),
                  name: "int",
                  span: "[span]",
                )),
              ),
            ],
            values: [
              Expression(
                span: "[span]",
                kind: Integer(5),
                meta: {},
              ),
            ],
          ),
          meta: {
            "alloc::vec::Vec<compiler::ast::SymbolId>": "[SymbolId(0)]",
          },
        ),
        Statement(
          span: "[span]",
          kind: VariableDeclaration(
            idents: [
              TypedIdent(
                ident: Ident(
                  span: "[span]",
                  ident: "doubled",
                ),
                ty: None,
              ),
            ],
            values: [
              Expression(
                span: "[span]",
                kind: MethodCall(
                  receiver: Expression(
                    span: "[span]",
                    kind: Variable("x"),
                    meta: {
                      "compiler::ast::SymbolId": "SymbolId(0)",
                    },
                  ),
                  method: Ident(
                    span: "[span]",
                    ident: "double",
                  ),
                  arguments: [],
                ),
                meta: {},
              ),
            ],
          ),
          meta: {
            "alloc::vec::Vec<compiler::ast::SymbolId>": "[SymbolId(1)]",
          },
        ),
      ],
      arguments: [],
      return_types: FunctionReturn(
        types: [],
        span: "[span]",
      ),
      modifiers: FunctionModifiers(
        is_event_handler: None,
      ),
      meta: {
        "compiler::ast::FunctionId": "FunctionId(0)",
        "compiler::compile::symtab_visitor::FunctionArgumentSymbols": "FunctionArgumentSymbols([])",
      },
    ),
    Function(
      kind: Method(
        receiver_type: Ident(
          span: "[span]",
          ident: "int",
        ),
      ),
      name: "double",
      span: "[span]",
      statements: [
        Statement(
          span: "[span]",
          kind: Return(
            values: [
              Expression(
                span: "[span]",
                kind: BinaryOperation(
                  lhs: Expression(
                    span: "[span]",
                    kind: Variable("self"),
                    meta: {
                      "compiler::ast::SymbolId": "SymbolId(2)",
                    },
                  ),
                  operator: Add,
                  rhs: Expression(
                    span: "[span]",
                    kind: Variable("self"),
                    meta: {
                      "compiler::ast::SymbolId": "SymbolId(2)",
                    },
                  ),
                ),
                meta: {},
              ),
            ],
          ),
          meta: {},
        ),
      ],
      arguments: [
        TypedIdent(
          ident: Ident(
            span: "[span]",
            ident: "self",
          ),
          ty: Some(TypeWithLocation(
            t: Some(Int),
            name: "int",
            span: "[span]",
          )),
        ),
      ],
      return_types: FunctionReturn(
        types: [
          TypeWithLocation(
            t: Some(Int),
            name: "int",
            span: "[span]",
          ),
        ],
        span: "[span]",
      ),
      modifiers: FunctionModifiers(
        is_event_handler: None,
      ),
      meta: {
        "compiler::ast::FunctionId": "FunctionId(1)",
        "compiler::compile::symtab_visitor::FunctionArgumentSymbols": "FunctionArgumentSymbols([SymbolId(2)])",
      },
    ),
  ],
  extern_functions: [],
  builtin_functions: [],
)
