compiler/src/compile/snapshots/compiler__compile__symtab_visitor__test__symtab_success_snapshot_tests@multi_assign_extern_success.tapir.snap
---
source: compiler/src/compile/symtab_visitor.rs
expression: script
input_file: compiler/src/compile/snapshot_tests/symtab_visitor/multi_assign_extern_success.tapir
---
Script(
  struct_declarations: [],
  property_declarations: [],
  globals: [],
  functions: [
    Function(
      name: "@toplevel",
      span: "[span]",
      statements: [
        Statement(
          span: "[span]",
          kind: VariableDeclaration(
            idents: [
              TypedIdent(
                ident: Ident(
                  span: "[span]",
                  ident: "x",
                ),
                ty: None,
              ),
              TypedIdent(
                ident: Ident(
                  span: "[span]",
                  ident: "y",
                ),
                ty: None,
              ),
            ],
            values: [
              Expression(
                span: "[span]",
                kind: Call(
                  name: "get_position",
                  arguments: [],
                ),
                meta: {
                  "compiler::ast::InternalOrExternalFunctionId": "External(ExternalFunctionId(0))",
                },
              ),
            ],
          ),
          meta: {
            "alloc::vec::Vec<compiler::ast::SymbolId>": "[SymbolId(0), SymbolId(1)]",
          },
        ),
        Statement(
          span: "[span]",
          kind: Assignment(
            idents: [
              Ident(
                span: "[span]",
                ident: "x",
              ),
              Ident(
                span: "[span]",
                ident: "y",
              ),
            ],
            values: [
              Expression(
                span: "[span]",
                kind: Call(
                  name: "get_position",
                  arguments: [],
                ),
                meta: {
                  "compiler::ast::InternalOrExternalFunctionId": "External(ExternalFunctionId(0))",
                },
              ),
            ],
          ),
          meta: {
            "alloc::vec::Vec<compiler::ast::SymbolId>": "[SymbolId(0), SymbolId(1)]",
          },
        ),
      ],
      arguments: [],
      return_types: FunctionReturn(
        types: [],
        span: "[span]",
      ),
      modifiers: FunctionModifiers(
        is_event_handler: None,
      ),
      meta: {
        "compiler::ast::FunctionId": "FunctionId(0)",
        "compiler::compile::symtab_visitor::FunctionArgumentSymbols": "FunctionArgumentSymbols([])",
      },
    ),
  ],
  extern_functions: [
    ExternFunctionDefinition(
      name: "get_position",
      span: "[span]",
      arguments: [],
      return_types: FunctionReturn(
        types: [
          TypeWithLocation(
            t: Fix,
            span: "[span]",
          ),
          TypeWithLocation(
            t: Fix,
            span: "[span]",
          ),
        ],
        span: "[span]",
      ),
      meta: {
        "compiler::ast::ExternalFunctionId": "ExternalFunctionId(0)",
      },
    ),
  ],
  builtin_functions: [],
)
