compiler/src/compile/snapshots/compiler__compile__symtab_visitor__test__symtab_success_snapshot_tests@multi_assign_function_success.tapir.snap
---
source: compiler/src/compile/symtab_visitor.rs
expression: script
input_file: compiler/src/compile/snapshot_tests/symtab_visitor/multi_assign_function_success.tapir
---
Script(
  property_declarations: [],
  globals: [],
  functions: [
    Function(
      name: "@toplevel",
      span: "[span]",
      statements: [
        Statement(
          span: "[span]",
          kind: VariableDeclaration(
            idents: [
              TypedIdent(
                ident: Ident(
                  span: "[span]",
                  ident: "a",
                ),
                ty: None,
              ),
              TypedIdent(
                ident: Ident(
                  span: "[span]",
                  ident: "b",
                ),
                ty: None,
              ),
            ],
            values: [
              Expression(
                span: "[span]",
                kind: Call(
                  name: "returns_two",
                  arguments: [],
                ),
                meta: {
                  "compiler::ast::InternalOrExternalFunctionId": "Internal(FunctionId(1))",
                },
              ),
            ],
          ),
          meta: {
            "alloc::vec::Vec<compiler::ast::SymbolId>": "[SymbolId(0), SymbolId(1)]",
          },
        ),
        Statement(
          span: "[span]",
          kind: Assignment(
            idents: [
              Ident(
                span: "[span]",
                ident: "a",
              ),
              Ident(
                span: "[span]",
                ident: "b",
              ),
            ],
            values: [
              Expression(
                span: "[span]",
                kind: Call(
                  name: "returns_two",
                  arguments: [],
                ),
                meta: {
                  "compiler::ast::InternalOrExternalFunctionId": "Internal(FunctionId(1))",
                },
              ),
            ],
          ),
          meta: {
            "alloc::vec::Vec<compiler::ast::SymbolId>": "[SymbolId(0), SymbolId(1)]",
          },
        ),
      ],
      arguments: [],
      return_types: FunctionReturn(
        types: [],
        span: "[span]",
      ),
      modifiers: FunctionModifiers(
        is_event_handler: None,
      ),
      meta: {
        "compiler::ast::FunctionId": "FunctionId(0)",
        "compiler::compile::symtab_visitor::FunctionArgumentSymbols": "FunctionArgumentSymbols([])",
      },
    ),
    Function(
      name: "returns_two",
      span: "[span]",
      statements: [
        Statement(
          span: "[span]",
          kind: Return(
            values: [
              Expression(
                span: "[span]",
                kind: Integer(1),
                meta: {},
              ),
              Expression(
                span: "[span]",
                kind: Fix,
                meta: {},
              ),
            ],
          ),
          meta: {},
        ),
      ],
      arguments: [],
      return_types: FunctionReturn(
        types: [
          TypeWithLocation(
            t: Int,
            span: "[span]",
          ),
          TypeWithLocation(
            t: Fix,
            span: "[span]",
          ),
        ],
        span: "[span]",
      ),
      modifiers: FunctionModifiers(
        is_event_handler: None,
      ),
      meta: {
        "compiler::ast::FunctionId": "FunctionId(1)",
        "compiler::compile::symtab_visitor::FunctionArgumentSymbols": "FunctionArgumentSymbols([])",
      },
    ),
  ],
  extern_functions: [],
)
