compiler/src/compile/snapshots/compiler__compile__symtab_visitor__test__symtab_success_snapshot_tests@multi_assign_paired_success.tapir.snap
---
source: compiler/src/compile/symtab_visitor.rs
expression: script
input_file: compiler/src/compile/snapshot_tests/symtab_visitor/multi_assign_paired_success.tapir
---
Script(
  struct_declarations: [],
  property_declarations: [],
  globals: [],
  functions: [
    Function(
      operator_def: None,
      receiver_type: None,
      name: "@toplevel",
      span: "[span]",
      statements: [
        Statement(
          span: "[span]",
          kind: VariableDeclaration(
            idents: [
              TypedIdent(
                ident: Ident(
                  span: "[span]",
                  ident: "a",
                ),
                ty: None,
              ),
              TypedIdent(
                ident: Ident(
                  span: "[span]",
                  ident: "b",
                ),
                ty: None,
              ),
            ],
            values: [
              Expression(
                span: "[span]",
                kind: Integer(1),
                meta: {},
              ),
              Expression(
                span: "[span]",
                kind: Integer(2),
                meta: {},
              ),
            ],
          ),
          meta: {
            "alloc::vec::Vec<compiler::ast::SymbolId>": "[SymbolId(0), SymbolId(1)]",
          },
        ),
        Statement(
          span: "[span]",
          kind: VariableDeclaration(
            idents: [
              TypedIdent(
                ident: Ident(
                  span: "[span]",
                  ident: "x",
                ),
                ty: None,
              ),
              TypedIdent(
                ident: Ident(
                  span: "[span]",
                  ident: "y",
                ),
                ty: None,
              ),
              TypedIdent(
                ident: Ident(
                  span: "[span]",
                  ident: "z",
                ),
                ty: None,
              ),
            ],
            values: [
              Expression(
                span: "[span]",
                kind: Fix,
                meta: {},
              ),
              Expression(
                span: "[span]",
                kind: Fix,
                meta: {},
              ),
              Expression(
                span: "[span]",
                kind: Fix,
                meta: {},
              ),
            ],
          ),
          meta: {
            "alloc::vec::Vec<compiler::ast::SymbolId>": "[SymbolId(2), SymbolId(3), SymbolId(4)]",
          },
        ),
        Statement(
          span: "[span]",
          kind: Assignment(
            targets: [
              [
                Ident(
                  span: "[span]",
                  ident: "a",
                ),
              ],
              [
                Ident(
                  span: "[span]",
                  ident: "b",
                ),
              ],
            ],
            values: [
              Expression(
                span: "[span]",
                kind: Integer(3),
                meta: {},
              ),
              Expression(
                span: "[span]",
                kind: Integer(4),
                meta: {},
              ),
            ],
          ),
          meta: {
            "alloc::vec::Vec<compiler::ast::SymbolId>": "[SymbolId(0), SymbolId(1)]",
          },
        ),
        Statement(
          span: "[span]",
          kind: Assignment(
            targets: [
              [
                Ident(
                  span: "[span]",
                  ident: "a",
                ),
              ],
              [
                Ident(
                  span: "[span]",
                  ident: "b",
                ),
              ],
            ],
            values: [
              Expression(
                span: "[span]",
                kind: Variable("b"),
                meta: {
                  "compiler::ast::SymbolId": "SymbolId(1)",
                },
              ),
              Expression(
                span: "[span]",
                kind: Variable("a"),
                meta: {
                  "compiler::ast::SymbolId": "SymbolId(0)",
                },
              ),
            ],
          ),
          meta: {
            "alloc::vec::Vec<compiler::ast::SymbolId>": "[SymbolId(0), SymbolId(1)]",
          },
        ),
      ],
      arguments: [],
      return_types: FunctionReturn(
        types: [],
        span: "[span]",
      ),
      modifiers: FunctionModifiers(
        is_event_handler: None,
      ),
      meta: {
        "compiler::ast::FunctionId": "FunctionId(0)",
        "compiler::compile::symtab_visitor::FunctionArgumentSymbols": "FunctionArgumentSymbols([])",
      },
    ),
  ],
  extern_functions: [],
  builtin_functions: [],
)
