compiler/src/compile/snapshots/compiler__compile__symtab_visitor__test__symtab_success_snapshot_tests@property_success.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/symtab_visitor.rs
expression: script
input_file: crates/tapir-script/compiler/src/compile/snapshot_tests/symtab_visitor/property_success.tapir
---
Script(
  functions: [
    Function(
      name: "@toplevel",
      span: "[span]",
      statements: [
        Statement(
          span: "[span]",
          kind: VariableDeclaration(
            idents: [
              Ident(
                span: "[span]",
                ident: "x",
              ),
            ],
            values: [
              Expression(
                span: "[span]",
                kind: BinaryOperation(
                  lhs: Expression(
                    span: "[span]",
                    kind: Variable("int_prop"),
                    meta: {
                      "compiler::ast::SymbolId": "SymbolId(0)",
                    },
                  ),
                  operator: Add,
                  rhs: Expression(
                    span: "[span]",
                    kind: Integer(2),
                    meta: {},
                  ),
                ),
                meta: {},
              ),
            ],
          ),
          meta: {
            "alloc::vec::Vec<compiler::ast::SymbolId>": "[SymbolId(1)]",
          },
        ),
        Statement(
          span: "[span]",
          kind: Assignment(
            idents: [
              Ident(
                span: "[span]",
                ident: "int_prop",
              ),
            ],
            values: [
              Expression(
                span: "[span]",
                kind: Integer(3),
                meta: {},
              ),
            ],
          ),
          meta: {
            "alloc::vec::Vec<compiler::ast::SymbolId>": "[SymbolId(0)]",
          },
        ),
      ],
      arguments: [],
      return_types: FunctionReturn(
        types: [],
        span: "[span]",
      ),
      modifiers: FunctionModifiers(
        is_event_handler: None,
      ),
      meta: {
        "compiler::ast::FunctionId": "FunctionId(0)",
      },
    ),
  ],
  extern_functions: [],
)
