compiler/src/compile/snapshots/compiler__compile__symtab_visitor__test__symtab_success_snapshot_tests@struct_property_nested_success.tapir.snap
---
source: compiler/src/compile/symtab_visitor.rs
expression: script
input_file: compiler/src/compile/snapshot_tests/symtab_visitor/struct_property_nested_success.tapir
---
Script(
  struct_declarations: [
    StructDeclaration(
      name: Ident(
        span: "[span]",
        ident: "Point",
      ),
      fields: [
        TypedIdent(
          ident: Ident(
            span: "[span]",
            ident: "x",
          ),
          ty: Some(TypeWithLocation(
            t: Some(Int),
            name: "int",
            span: "[span]",
          )),
        ),
        TypedIdent(
          ident: Ident(
            span: "[span]",
            ident: "y",
          ),
          ty: Some(TypeWithLocation(
            t: Some(Int),
            name: "int",
            span: "[span]",
          )),
        ),
      ],
      span: "[span]",
    ),
    StructDeclaration(
      name: Ident(
        span: "[span]",
        ident: "Rect",
      ),
      fields: [
        TypedIdent(
          ident: Ident(
            span: "[span]",
            ident: "origin",
          ),
          ty: Some(TypeWithLocation(
            t: None,
            name: "Point",
            span: "[span]",
          )),
        ),
        TypedIdent(
          ident: Ident(
            span: "[span]",
            ident: "size",
          ),
          ty: Some(TypeWithLocation(
            t: None,
            name: "Point",
            span: "[span]",
          )),
        ),
      ],
      span: "[span]",
    ),
  ],
  property_declarations: [
    PropertyDeclaration(
      name: TypedIdent(
        ident: Ident(
          span: "[span]",
          ident: "bounds",
        ),
        ty: Some(TypeWithLocation(
          t: Some(Struct(StructId(1))),
          name: "Rect",
          span: "[span]",
        )),
      ),
      span: "[span]",
    ),
  ],
  globals: [],
  functions: [
    Function(
      name: "@toplevel",
      span: "[span]",
      statements: [
        Statement(
          span: "[span]",
          kind: Assignment(
            targets: [
              [
                Ident(
                  span: "[span]",
                  ident: "bounds",
                ),
                Ident(
                  span: "[span]",
                  ident: "origin",
                ),
                Ident(
                  span: "[span]",
                  ident: "x",
                ),
              ],
            ],
            values: [
              Expression(
                span: "[span]",
                kind: Integer(10),
                meta: {},
              ),
            ],
          ),
          meta: {
            "alloc::vec::Vec<compiler::ast::SymbolId>": "[SymbolId(2305843009213693953)]",
          },
        ),
        Statement(
          span: "[span]",
          kind: Assignment(
            targets: [
              [
                Ident(
                  span: "[span]",
                  ident: "bounds",
                ),
                Ident(
                  span: "[span]",
                  ident: "origin",
                ),
                Ident(
                  span: "[span]",
                  ident: "y",
                ),
              ],
            ],
            values: [
              Expression(
                span: "[span]",
                kind: Integer(20),
                meta: {},
              ),
            ],
          ),
          meta: {
            "alloc::vec::Vec<compiler::ast::SymbolId>": "[SymbolId(2305843009213693953)]",
          },
        ),
        Statement(
          span: "[span]",
          kind: Assignment(
            targets: [
              [
                Ident(
                  span: "[span]",
                  ident: "bounds",
                ),
                Ident(
                  span: "[span]",
                  ident: "size",
                ),
                Ident(
                  span: "[span]",
                  ident: "x",
                ),
              ],
            ],
            values: [
              Expression(
                span: "[span]",
                kind: Integer(100),
                meta: {},
              ),
            ],
          ),
          meta: {
            "alloc::vec::Vec<compiler::ast::SymbolId>": "[SymbolId(2305843009213693953)]",
          },
        ),
        Statement(
          span: "[span]",
          kind: Assignment(
            targets: [
              [
                Ident(
                  span: "[span]",
                  ident: "bounds",
                ),
                Ident(
                  span: "[span]",
                  ident: "size",
                ),
                Ident(
                  span: "[span]",
                  ident: "y",
                ),
              ],
            ],
            values: [
              Expression(
                span: "[span]",
                kind: Integer(200),
                meta: {},
              ),
            ],
          ),
          meta: {
            "alloc::vec::Vec<compiler::ast::SymbolId>": "[SymbolId(2305843009213693953)]",
          },
        ),
        Statement(
          span: "[span]",
          kind: VariableDeclaration(
            idents: [
              TypedIdent(
                ident: Ident(
                  span: "[span]",
                  ident: "ox",
                ),
                ty: None,
              ),
            ],
            values: [
              Expression(
                span: "[span]",
                kind: FieldAccess(
                  base: Expression(
                    span: "[span]",
                    kind: FieldAccess(
                      base: Expression(
                        span: "[span]",
                        kind: Variable("bounds"),
                        meta: {
                          "compiler::ast::SymbolId": "SymbolId(2305843009213693953)",
                        },
                      ),
                      field: Ident(
                        span: "[span]",
                        ident: "origin",
                      ),
                    ),
                    meta: {},
                  ),
                  field: Ident(
                    span: "[span]",
                    ident: "x",
                  ),
                ),
                meta: {},
              ),
            ],
          ),
          meta: {
            "alloc::vec::Vec<compiler::ast::SymbolId>": "[SymbolId(4)]",
          },
        ),
        Statement(
          span: "[span]",
          kind: VariableDeclaration(
            idents: [
              TypedIdent(
                ident: Ident(
                  span: "[span]",
                  ident: "oy",
                ),
                ty: None,
              ),
            ],
            values: [
              Expression(
                span: "[span]",
                kind: FieldAccess(
                  base: Expression(
                    span: "[span]",
                    kind: FieldAccess(
                      base: Expression(
                        span: "[span]",
                        kind: Variable("bounds"),
                        meta: {
                          "compiler::ast::SymbolId": "SymbolId(2305843009213693953)",
                        },
                      ),
                      field: Ident(
                        span: "[span]",
                        ident: "origin",
                      ),
                    ),
                    meta: {},
                  ),
                  field: Ident(
                    span: "[span]",
                    ident: "y",
                  ),
                ),
                meta: {},
              ),
            ],
          ),
          meta: {
            "alloc::vec::Vec<compiler::ast::SymbolId>": "[SymbolId(5)]",
          },
        ),
        Statement(
          span: "[span]",
          kind: VariableDeclaration(
            idents: [
              TypedIdent(
                ident: Ident(
                  span: "[span]",
                  ident: "sx",
                ),
                ty: None,
              ),
            ],
            values: [
              Expression(
                span: "[span]",
                kind: FieldAccess(
                  base: Expression(
                    span: "[span]",
                    kind: FieldAccess(
                      base: Expression(
                        span: "[span]",
                        kind: Variable("bounds"),
                        meta: {
                          "compiler::ast::SymbolId": "SymbolId(2305843009213693953)",
                        },
                      ),
                      field: Ident(
                        span: "[span]",
                        ident: "size",
                      ),
                    ),
                    meta: {},
                  ),
                  field: Ident(
                    span: "[span]",
                    ident: "x",
                  ),
                ),
                meta: {},
              ),
            ],
          ),
          meta: {
            "alloc::vec::Vec<compiler::ast::SymbolId>": "[SymbolId(6)]",
          },
        ),
        Statement(
          span: "[span]",
          kind: VariableDeclaration(
            idents: [
              TypedIdent(
                ident: Ident(
                  span: "[span]",
                  ident: "sy",
                ),
                ty: None,
              ),
            ],
            values: [
              Expression(
                span: "[span]",
                kind: FieldAccess(
                  base: Expression(
                    span: "[span]",
                    kind: FieldAccess(
                      base: Expression(
                        span: "[span]",
                        kind: Variable("bounds"),
                        meta: {
                          "compiler::ast::SymbolId": "SymbolId(2305843009213693953)",
                        },
                      ),
                      field: Ident(
                        span: "[span]",
                        ident: "size",
                      ),
                    ),
                    meta: {},
                  ),
                  field: Ident(
                    span: "[span]",
                    ident: "y",
                  ),
                ),
                meta: {},
              ),
            ],
          ),
          meta: {
            "alloc::vec::Vec<compiler::ast::SymbolId>": "[SymbolId(7)]",
          },
        ),
      ],
      arguments: [],
      return_types: FunctionReturn(
        types: [],
        span: "[span]",
      ),
      modifiers: FunctionModifiers(
        is_event_handler: None,
      ),
      meta: {
        "compiler::ast::FunctionId": "FunctionId(0)",
        "compiler::compile::symtab_visitor::FunctionArgumentSymbols": "FunctionArgumentSymbols([])",
      },
    ),
  ],
  extern_functions: [],
  builtin_functions: [],
)
